# Pleiades

./: .editorconfig  .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  agent-behavior.html  architecture.html  browser.html  budgets.html  clippy.toml  configuration.html  custom-commands.html  deny.toml  diff-review.html  getting-started.html  git.html  hot-reload.html  index.html  install.sh  lsp.html  mcp.html  memory.html  opencode.json  packages.html  plugins.html  print.html  processes.html  project-recipes.html  prompts.html  providers.html  rust-toolchain.toml  rustfmt.toml  (+53 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  publish-crates.yml  release.yml
.pleiades/: config.toml
.specify/: feature.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
Formula/: pleiades.rb
crates/pleiades-agent/: Cargo.toml
crates/pleiades-agent-audit/: Cargo.toml
crates/pleiades-agent-audit/src/: lib.rs
crates/pleiades-agent-browser/: Cargo.toml
crates/pleiades-agent-browser/src/: lib.rs
crates/pleiades-agent-commands/: Cargo.toml
crates/pleiades-agent-commands/src/: context.rs  defaults.rs  handler.rs  lib.rs  parser.rs  registry.rs  result.rs  spec.rs
crates/pleiades-agent-config/: Cargo.toml
crates/pleiades-agent-config/src/: lib.rs  loader.rs  secret.rs  types.rs  validate.rs
crates/pleiades-agent-core/: Cargo.toml
crates/pleiades-agent-engine/: Cargo.toml
crates/pleiades-agent-engine/src/: agent.rs  budget.rs  chat.rs  checkpoint.rs  context.rs  engine.rs  lib.rs  loop_detector.rs  memory.rs  runtime.rs  session.rs  verification.rs
crates/pleiades-agent-git/: Cargo.toml
crates/pleiades-agent-git/src/: commit.rs  common.rs  diff.rs  lib.rs  review.rs  summary.rs
crates/pleiades-agent-lsp/: Cargo.toml
crates/pleiades-agent-lsp/src/: lib.rs
crates/pleiades-agent-mcp/: Cargo.toml
crates/pleiades-agent-mcp/src/: client.rs  error.rs  lib.rs  protocol.rs  registry.rs
crates/pleiades-agent-memory/: Cargo.toml
crates/pleiades-agent-memory/src/: store.rs  tiers.rs
crates/pleiades-agent-permissions/: Cargo.toml
crates/pleiades-agent-permissions/src/: lib.rs
crates/pleiades-agent-plugins/: Cargo.toml
crates/pleiades-agent-plugins/src/: lib.rs  manager.rs  manifest.rs  plugin.rs  registry.rs
crates/pleiades-agent-process/: Cargo.toml
crates/pleiades-agent-process/src/: lib.rs
crates/pleiades-agent-prompts/: Cargo.toml
crates/pleiades-agent-prompts/benches/: prompt_render.rs
crates/pleiades-agent-prompts/src/: builtin.rs  error.rs  lib.rs  template.rs
crates/pleiades-agent-providers/: Cargo.toml
crates/pleiades-agent-providers/src/: anthropic.rs  client.rs  codex.rs  lib.rs  openai.rs  openai_compat.rs
crates/pleiades-agent-sdk/: Cargo.toml
crates/pleiades-agent-sdk/src/: lib.rs
crates/pleiades-agent-services/: Cargo.toml
crates/pleiades-agent-services/src/: custom_commands.rs  lib.rs  mcp.rs  models.rs  permissions.rs  plugins.rs  project.rs  providers.rs  skills.rs
crates/pleiades-agent-tools/: Cargo.toml
crates/pleiades-agent-tools/src/: bash.rs  diff.rs  edit.rs  fetch.rs  glob_tool.rs  grep_tool.rs  lib.rs  read.rs  search.rs  workspace.rs  write.rs
crates/pleiades-agent-tui/: Cargo.toml
crates/pleiades-agent-tui/src/: app.rs  input.rs  lib.rs  markdown.rs  state.rs  terminal.rs  theme.rs  ui.rs
crates/pleiades-agent-tui/src/snapshots/: pleiades_agent_tui__ui__tests__seven_sisters_shell_snapshot.snap  pleiades_agent_tui__ui__tests__yolo_warning_snapshot.snap
crates/pleiades-agent-workflow/: Cargo.toml
crates/pleiades-agent-workflow/src/: execute.rs  workflow.rs
crates/pleiades-agent/src/: app.rs  main.rs  repl.rs
crates/pleiades-agent/tests/: cli_flows.rs
crates/pleiades-cli/: Cargo.toml
crates/pleiades-cli/src/: app.rs  main.rs  repl.rs
crates/pleiades-cli/tests/: cli_flows.rs
crates/pleiades-config/: Cargo.toml
crates/pleiades-config/src/: env_interpolate.rs  lib.rs  loader.rs  profile.rs  secret.rs  types.rs  validate.rs
crates/pleiades-core/: Cargo.toml
crates/pleiades-core/src/: conversation.rs  error.rs  event.rs  lib.rs  model.rs  provider.rs  tool.rs
crates/pleiades-engine/: Cargo.toml
crates/pleiades-engine/src/: agent.rs  chat.rs  engine.rs  lib.rs  memory.rs  session.rs
crates/pleiades-git/: Cargo.toml
crates/pleiades-git/src/: commit.rs  common.rs  lib.rs  review.rs  summary.rs
crates/pleiades-memory/: Cargo.toml
crates/pleiades-memory/src/: lib.rs  store.rs  tiers.rs
crates/pleiades-plugins/: Cargo.toml
crates/pleiades-plugins/src/: hooks.rs  lib.rs  manager.rs  manifest.rs  plugin.rs  registry.rs
crates/pleiades-prompts/: Cargo.toml
crates/pleiades-prompts/benches/: prompt_render.rs
crates/pleiades-prompts/src/: builtin.rs  error.rs  library.rs  template.rs
crates/pleiades-providers/: Cargo.toml
crates/pleiades-providers/src/: anthropic.rs  client.rs  lib.rs  openai.rs  openai_compat.rs
crates/pleiades-sdk/: Cargo.toml
crates/pleiades-tools/: Cargo.toml
crates/pleiades-tui/: Cargo.toml
crates/pleiades-workflow/: Cargo.toml
docs/: 404.html  ARCHITECTURE.md  DIRECTORY_STRUCTURE.md  FEATURE_MATRIX.md  PERFORMANCE.md  REQUIREMENTS.md  RISK_ANALYSIS.md  ROADMAP.md  VISION.md  architecture.html  configuration.html  getting-started.html  git.html  index.html  packages.html  plugins.html  print.html  prompts.html  providers.html  release-2.2-report.md  release-2.3-report.md  searcher-09f2665d.js  searchindex-36f51025.js  searchindex-7d9e4f65.js  searchindex-9dc83553.js  searchindex-ae0cccee.js  toc-d783fdbd.js  toc.html  tools.html  workflows.html
docs/adr/: 0001-command-registry-and-application-services.md  0002-shared-application-services.md  0003-approval-and-sandbox-policies.md  0005-runtime-checkpoints.md  (+5 more)
(+52 files in other folders)
