[workspace]
resolver = "2"
members = [
    "crates/pleiades-agent",
    "crates/pleiades-agent-core",
    "crates/pleiades-agent-config",
    "crates/pleiades-agent-engine",
    "crates/pleiades-agent-tui",
    "crates/pleiades-agent-providers",
    "crates/pleiades-agent-tools",
    "crates/pleiades-agent-plugins",
    "crates/pleiades-agent-memory",
    "crates/pleiades-agent-workflow",
    "crates/pleiades-agent-git",
    "crates/pleiades-agent-prompts",
    "crates/pleiades-agent-sdk",
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
