[package]
name = "pleiades-agent-browser"
version = "2.0.0"
edition = "2024"
description = "Optional Playwright browser verification for Pleiades"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "2.0.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "macros", "rt"] }

[dev-dependencies]
tempfile = "3"
