[package]
name = "pleiades-agent-commands"
version = "2.0.0"
edition = "2024"
description = "Pleiades command registry and application command surface"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "2.0.0" }
pleiades-agent-services = { path = "../pleiades-agent-services", version = "2.0.0" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
pleiades-agent-config = { path = "../pleiades-agent-config", version = "2.0.0" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
