[package]
name = "pleiades-agent-config"
version = "2.0.0"
edition = "2024"
description = "Pleiades multi-level configuration system"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-permissions = { path = "../pleiades-agent-permissions", version = "2.0.0" }
pleiades-agent-core = { path = "../pleiades-agent-core", version = "2.0.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
serde_yaml = "0.9"
shellexpand = "3"
directories = "5"
dirs = "5"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
