[package]
name = "pleiades-agent-git"
version = "2.0.0"
edition = "2024"
description = "Pleiades git integration"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "2.0.0" }
pleiades-agent-config = { path = "../pleiades-agent-config", version = "2.0.0" }
pleiades-agent-prompts = { path = "../pleiades-agent-prompts", version = "2.0.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
