[package]
name = "pleiades-agent-memory"
version = "2.0.0"
edition = "2024"
description = "Pleiades multi-tier memory system"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "2.0.0" }
pleiades-agent-config = { path = "../pleiades-agent-config", version = "2.0.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
