[package]
name = "pleiades-agent-permissions"
version = "2.0.0"
edition = "2024"
description = "Structured permission policy engine for Pleiades"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
globset = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
