[package]
name = "pleiades-agent-process"
version = "2.0.0"
edition = "2024"
description = "Background process manager for Pleiades"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "2.0.0" }

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
