[package]
name = "pleiades-agent-prompts"
version = "1.1.0"
edition = "2024"
description = "Prompt template library for Pleiades"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "1.1.0" }
pleiades-agent-config = { path = "../pleiades-agent-config", version = "1.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "prompt_render"
harness = false
