[package]
name = "pleiades-agent-providers"
version = "1.1.1"
edition = "2024"
description = "Pleiades AI provider implementations"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "1.1.0" }
pleiades-agent-config = { path = "../pleiades-agent-config", version = "1.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
futures = "0.3"
base64 = "0.22"
