[package]
name = "pleiades-agent-sdk"
version = "2.0.0"
edition = "2024"
description = "Pleiades plugin SDK for plugin authors"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "2.0.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
