[package]
name = "pleiades-agent-tui"
version = "1.2.0"
edition = "2024"
description = "Pleiades terminal user interface"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "1.2.0" }
pleiades-agent-config = { path = "../pleiades-agent-config", version = "1.1.0" }
pleiades-agent-engine = { path = "../pleiades-agent-engine", version = "1.1.0" }
pleiades-agent-providers = { path = "../pleiades-agent-providers", version = "1.2.0" }
pleiades-agent-tools = { path = "../pleiades-agent-tools", version = "1.1.0" }

pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
tui-textarea = "0.6.1"
tracing = "0.1"
unicode-width = "0.2"
once_cell = "1"
serde_json = "1"
rustyline = "14"
chrono = "0.4"
