[package]
name = "pleiades-agent-workflow"
version = "1.1.0"
edition = "2024"
description = "Pleiades workflow engine"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-agent-core = { path = "../pleiades-agent-core", version = "1.1.0" }
pleiades-agent-config = { path = "../pleiades-agent-config", version = "1.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
futures = "0.3"
