[package]
name = "pleiades-config"
version = "0.1.0"
edition = "2024"
description = "Pleiades multi-level configuration system"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/yourusername/pleiades"

[dependencies]
pleiades-core = { path = "../pleiades-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
shellexpand = "3"
directories = "5"
dirs = "5"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
