[package]
name = "pleiades-core"
version = "0.1.0"
edition = "2024"
description = "Pleiades core domain types and traits"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/yourusername/pleiades"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
