[package]
name = "pleiades-git"
version = "0.1.0"
edition = "2024"
description = "Pleiades git integration"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/yourusername/pleiades"

[dependencies]
pleiades-core = { path = "../pleiades-core" }
pleiades-config = { path = "../pleiades-config" }
pleiades-prompts = { path = "../pleiades-prompts" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
