[package]
name = "pleiades-memory"
version = "0.1.0"
edition = "2024"
description = "Pleiades multi-tier memory system"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/yourusername/pleiades"

[dependencies]
pleiades-core = { path = "../pleiades-core" }
pleiades-config = { path = "../pleiades-config" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
