[package]
name = "pleiades-plugins"
version = "0.1.0"
edition = "2024"
description = "Pleiades WASM-based plugin system"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/yourusername/pleiades"

[dependencies]
pleiades-core = { path = "../pleiades-core" }
pleiades-config = { path = "../pleiades-config" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"

[features]
wasm = ["wasmtime"]
default = []

[dependencies.wasmtime]
version = "24"
optional = true
default-features = false
features = ["async"]
