[package]
name = "pleiades-plugins"
version = "1.0.0"
edition = "2024"
description = "Pleiades WASM-based plugin system"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-core = { path = "../pleiades-core", version = "1.0.0" }
pleiades-config = { path = "../pleiades-config", version = "1.0.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
chrono = "0.4"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
