[package]
name = "pleiades-prompts"
version = "0.1.0"
edition = "2024"
description = "Prompt template library for Pleiades"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/CodWasTaken/Pleiades"

[dependencies]
pleiades-core = { path = "../pleiades-core" }
pleiades-config = { path = "../pleiades-config" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "prompt_render"
harness = false
