[package]
name = "pleiades-providers"
version = "0.1.0"
edition = "2024"
description = "Pleiades AI provider implementations"
authors = ["Nataniel"]
license = "MIT"
repository = "https://github.com/yourusername/pleiades"

[dependencies]
pleiades-core = { path = "../pleiades-core" }
pleiades-config = { path = "../pleiades-config" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
futures = "0.3"
base64 = "0.22"
